--- a/Vérification extract full_text.ipynb
+++ b/Vérification extract full_text.ipynb
@@ -165,9 +165,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.7 64-bit ('nlp': conda)",
+   "display_name": "Python 3.7.7 64-bit ('pythonNLP': conda)",
    "language": "python",
-   "name": "python37764bitnlpconda5c0b16af28dc44729a76e35b50944172"
+   "name": "python37764bitpythonnlpcondaa52666eca57540e09306ffe2b498d1e7"
   },
   "language_info": {
    "codemirror_mode": {
