--- a/Vectorize_TFIDF.ipynb
+++ b/Vectorize_TFIDF.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +20,6 @@
     "import re\n",
     "import time\n",
     "\n",
-    "\n",
-    "import spacy\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -43,9 +41,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'gensim'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-e70e92d32c6e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mgensim\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'gensim'"
+     ]
+    }
+   ],
    "source": [
     "import gensim"
    ]
@@ -106,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -271,7 +281,7 @@
        "4                                                                      plan transformation l économie faveur climat résilience the shift project vidéo 5 50  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1442,7 +1452,7 @@
    "outputs": [],
    "source": [
     "# # tokens uniques\n",
-    "# vectorizer = CountVectorizer()\n",
+    "vectorizer = CountVectorizer()\n",
     "# X = vectorizer.fit_transform(df[\"full_text_processed\"])\n",
     "# print(vectorizer.get_feature_names())"
    ]
@@ -2078,9 +2088,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.7 64-bit ('nlp': conda)",
+   "display_name": "Python 3.7.7 64-bit ('pythonNLP': conda)",
    "language": "python",
-   "name": "python37764bitnlpconda5c0b16af28dc44729a76e35b50944172"
+   "name": "python37764bitpythonnlpcondaa52666eca57540e09306ffe2b498d1e7"
   },
   "language_info": {
    "codemirror_mode": {
